<resources>

    <string name="app_description">Various tweaks for Package Installer</string>
    <string name="app_name" translatable="false">XInstaller</string>
    <string name="app_developer" translatable="false">pyler</string>
    <string name="github" translatable="false">Github</string>
    <string name="xposed" translatable="false">Xposed</string>
    <string name="bug_report">Report bug</string>
    <string name="app_translator"></string>
    <string name="app_translator_url"></string>
    <string name="app">App</string>
    <string name="module">Module</string>
    <string name="xposed_module_not_active">Xposed module not activated.</string>
    <string name="xposed_module_not_active_subtext">"Did you enable the module and reboot?"</string>
    <string name="module_disabled_in_settings">XInstaller is disabled in the settings.</string>
    <string name="module_disabled_in_settings_subtext">Click to enable.</string>
    <string name="app_icon">Launcher icon</string>
    <string name="expert_mode">Expert mode</string>
    <string name="app_settings">Settings</string>
    <string name="installations">Installations</string>
    <string name="uninstallations">Uninstallations</string>
    <string name="misc">Misc</string>
    <string name="apps_info">Apps info</string>
    <string name="help">Help</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="reset">Reset</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="check_signatures">Checking signatures</string>
    <string name="keep_apps_data">Keeping apps data</string>
    <string name="downgrade_apps">Downgrading apps</string>
    <string name="forward_lock">Forward locking</string>
    <string name="install_unknown_apps">Installing unknown apps</string>
    <string name="verify_apps">Verifying apps</string>
    <string name="install_external_storage">Installing apps on external storage</string>
    <string name="disable_system_apps">Disabling system apps</string>
    <string name="uninstall_device_admins">Uninstalling device administrators</string>
    <string name="check_signatures_fdroid">Checking signatures (F-Droid)</string>
    <string name="auto_install">Auto installing</string>
    <string name="auto_uninstall">Auto uninstalling</string>
    <string name="auto_close_install">Auto closing after installing</string>
    <string name="auto_close_uninstall">Auto closing after uninstalling</string>
    <string name="auto_launch_install">Auto launching after installing</string>
    <string name="check_permissions">Checking permissions</string>
    <string name="backup_apk_files">Backing up APK files</string>
    <string name="install_unsigned_apps">Installing unsigned apps</string>
    <string name="verify_jar">Verifying JAR</string>
    <string name="verify_signatures">Verifying signatures</string>
    <string name="show_buttons">Showing buttons when obscured</string>
    <string name="debug_apps">Debugging apps</string>
    <string name="auto_backup">Auto backing up</string>
    <string name="show_package_name">Showing package names</string>
    <string name="show_version">Showing version info</string>
    <string name="current_version">Current version</string>
    <string name="new_version">New version</string>
    <string name="delete_apk_files_install">Deleting APK files after installing</string>
    <string name="move_apps">Moving apps</string>
    <string name="check_sdk_version">Checking SDK version</string>
    <string name="install_background">Installing in background</string>
    <string name="uninstall_background">Uninstalling in background</string>
    <string name="package_name_copied">Package name was copied to clipboard</string>
    <string name="launch_apps">Launching apps</string>
    <string name="launch_apps_summary">Click on the app icon.</string>
    <string name="check_duplicated_permissions">Checking duplicated permissions</string>
    <string name="export_apps">Exporting apps</string>
    <string name="export_apps_summary">Click on the app name.</string>
    <string name="apk_file_exported">APK file was exported</string>
    <string name="open_apps_google_play">Opening apps in Google Play</string>
    <string name="open_apps_google_play_summary">Long-press the app icon.</string>
    <string name="app_name_copied">App name was copied to clipboard</string>
    <string name="uninstall_system_apps">Uninstalling system apps</string>
    <string name="uninstall_system_apps_summary">Long-press on the disable button.</string>
    <string name="app_uninstalled">App was uninstalled</string>
    <string name="auto_enable_clear_buttons">Auto enabling clear buttons</string>
    <string name="auto_hide_install">Auto hiding when installing</string>
    <string name="check_lucky_patcher">Checking Lucky Patcher</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="version">Version</string>
    <string name="translator">Translator</string>
    <string name="no_backup_file">No backup file</string>
    <string name="preferences_backed_up">Successfully backed up</string>
    <string name="preferences_restored">Successfully restored</string>
    <string name="preferences_reset">Successfully reset</string>
    <string name="device_properties">Device properties</string>
    <string name="change">Change</string>
    <string name="device_model">Model</string>
    <string name="device_tags">Tags</string>
    <string name="device_board">Board</string>
    <string name="device_manufacturer">Manufacturer</string>
    <string name="device_product">Product</string>
    <string name="device_hardware">Hardware</string>
    <string name="change_device_properties">Changing device properties</string>
    <string name="backup_all_apps">Backing up all apps</string>
    <string name="open_app_ops">Opening App Ops</string>
    <string name="auto_update_google_play">Auto updating Google Play</string>
    <string name="locale">Locale</string>
    <string name="system">System</string>
    <string name="ar">Arabic</string>
    <string name="bn">Bengali</string>
    <string name="cs">Czech</string>
    <string name="de">German</string>
    <string name="el">Greek</string>
    <string name="es_ES">Spanish</string>
    <string name="fr">French</string>
    <string name="hu">Hungarian</string>
    <string name="it">Italian</string>
    <string name="iw">Hebrew</string>
    <string name="ja">Japanese</string>
    <string name="ko">Korean</string>
    <string name="ms">Malay</string>
    <string name="nl">Dutch</string>
    <string name="pl">Polish</string>
    <string name="pt_PT">Portuguese</string>
    <string name="ru">Russian</string>
    <string name="sk">Slovak</string>
    <string name="sl">Slovenian</string>
    <string name="tr">Turkish</string>
    <string name="zh_CN">Chinese Simplified</string>
    <string name="zh_TW">Chinese Traditional</string>
    <string name="disable_user_apps">Disabling user apps</string>
    <string name="hide_app_crashes">Hiding app crashes</string>
    <string name="confirm_check_signatures">Confirming signatures check</string>
    <string name="confirm_check_signatures_message">Disable signatures check for this installation?</string>
    <string name="en">English</string>
    <string name="enable_grant_runtime_permissions">Granting runtime permissions</string>

</resources>
