<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="app"
        android:title="@string/app">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_module"
            android:title="@string/module" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_app_icon"
            android:title="@string/app_icon" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="preferences"
        android:title="@string/app_settings">
        <PreferenceScreen
            android:key="installations"
            android:title="@string/installations">
            <PreferenceCategory
                android:key="installations_enable"
                android:title="@string/enable">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_downgrade_apps"
                    android:title="@string/downgrade_apps" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_install_unknown_apps"
                    android:title="@string/install_unknown_apps" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_install_external_storage"
                    android:title="@string/install_external_storage" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_grant_runtime_permissions"
                    android:title="@string/enable_grant_runtime_permissions" />

            </PreferenceCategory>
            <PreferenceCategory
                android:key="installations_disable"
                android:title="@string/disable">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_check_signatures"
                    android:title="@string/check_signatures" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_check_signatures_fdroid"
                    android:title="@string/check_signatures_fdroid" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_forward_lock"
                    android:title="@string/forward_lock" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_verify_apps"
                    android:title="@string/verify_apps" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_check_sdk_version"
                    android:title="@string/check_sdk_version" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="uninstallations"
            android:title="@string/uninstallations">
            <PreferenceCategory
                android:key="uninstallations_enable"
                android:title="@string/enable">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_keep_apps_data"
                    android:title="@string/keep_apps_data" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_uninstall_device_admins"
                    android:title="@string/uninstall_device_admins" />

            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="device_properties"
            android:title="@string/device_properties">
            <PreferenceCategory
                android:key="device_properties_enable"
                android:title="@string/enable">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_change_device_properties"
                    android:title="@string/change_device_properties" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="device_properties_change"
                android:title="@string/change">
                <EditTextPreference
                    android:key="device_model"
                    android:title="@string/device_model" />
                <EditTextPreference
                    android:key="device_manufacturer"
                    android:title="@string/device_manufacturer" />
                <EditTextPreference
                    android:key="device_product"
                    android:title="@string/device_product" />
                <EditTextPreference
                    android:key="device_board"
                    android:title="@string/device_board" />
                <EditTextPreference
                    android:key="device_hardware"
                    android:title="@string/device_hardware" />
                <EditTextPreference
                    android:key="device_tags"
                    android:title="@string/device_tags" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="device_properties_reset"
                android:title="@string/device_properties">
                <Preference
                    android:key="reset_device_properties"
                    android:title="@string/reset" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="misc"
            android:title="@string/misc">
            <PreferenceCategory
                android:key="misc_enable"
                android:title="@string/enable">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_show_buttons"
                    android:title="@string/show_buttons" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_debug_apps"
                    android:title="@string/debug_apps" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_auto_backup"
                    android:title="@string/auto_backup" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_backup_all_apps"
                    android:title="@string/backup_all_apps" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="misc_disable"
                android:title="@string/disable">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_check_permissions"
                    android:title="@string/check_permissions" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_verify_jar"
                    android:title="@string/verify_jar" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_verify_signatures"
                    android:title="@string/verify_signatures" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="disable_check_lucky_patcher"
                    android:title="@string/check_lucky_patcher" />
            </PreferenceCategory>
        </PreferenceScreen>


        <ListPreference
            android:defaultValue="system"
            android:entries="@array/locales"
            android:entryValues="@array/locale_codes"
            android:key="app_locale"
            android:summary="%s"
            android:title="@string/locale" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about"
        android:title="@string/about">
        <Preference
            android:summary="@string/app_developer"
            android:title="@string/developer" />
        <Preference
            android:key="app_translator"
            android:summary="@string/app_translator"
            android:title="@string/translator" />
        <Preference
            android:key="app_version"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>