<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="uninstallations">
    <PreferenceCategory
        android:key="enable"
        android:title="@string/enable">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_keep_apps_data"
            android:title="@string/keep_apps_data" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_uninstall_device_admins"
            android:title="@string/uninstall_device_admins" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_auto_uninstall"
            android:title="@string/auto_uninstall" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_auto_close_uninstall"
            android:title="@string/auto_close_uninstall" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="disable"
        android:title="@string/disable">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disable_uninstall_background"
            android:title="@string/uninstall_background" />
    </PreferenceCategory>
</PreferenceScreen>
